--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AppConsultas</string>
+    <string name="voltar">Voltar</string>
+    <string name="consultas_agendadas">Consultas Agendadas</string>
+    <string name="nova_consulta">Nova Consulta</string>
 </resources>
